Bug 251602 - bad looking localisation of some messages (german localisation)
Summary: bad looking localisation of some messages (german localisation)
Status: RESOLVED FIXED
Alias: None
Product: i18n
Classification: Translations
Component: de (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR minor
Target Milestone: ---
Assignee: Thomas Reitelbach
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-09-17 20:10 UTC by Joerg
Modified: 2011-10-05 06:40 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Joerg 2010-09-17 20:10:04 UTC
Version:           unspecified (using KDE 4.5.1) 
OS:                Linux

If I download something with Konqueror or kget which is using the global notification system, I get a message showing me the remaining time for the download. The german message is presented in a form like "1 laufende Aufgabe (xx Sekunden weitere)", which means in english "1 running job (xx seconds remaining)". The problem is, in german it sounds bad "xx Sekunden weitere" it should be "xx weitere Sekunden". The position of the german word "weitere" is wrong.

Reproducible: Always

Steps to Reproduce:
Every time I am using a KDE software with global notification and showing a remaining time of a progress.

Actual Results:  
plasma_applet_notifications is showing in german localisation "xx Sekunden weitere"

Expected Results:  
plasma_applet_notifications should show in german localisation "xx weitere Sekunden"
Comment 1 Burkhard Lück 2010-09-18 15:33:56 UTC
SVN commit 1176733 by lueck:

fix bad looking localisation reported by Jörg, thanks
BUG:251602

 M  +9 -6      plasma_applet_notifications.po  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1176733
Comment 2 Jekyll Wu 2011-10-05 06:15:41 UTC
Git commit 9b63c034a6b3c8f6c7becbd1bd9d43ac5857fb41 by Jekyll Wu.
Committed on 05/10/2011 at 06:53.
Pushed by jekyllwu into branch 'master'.

Always read/write the 'DefaultProfile' entry from/into 'konsolerc'.

That means the default profile is shared among konsole and all host
apps of konsole kpart. That is not ideal enough, but much better than
current inconsistent read/write for the 'DefaultProfile' entry.

BUG:251602
FIXED-IN: 4.8

M  +1    -1    src/SessionManager.cpp

http://commits.kde.org/konsole/9b63c034a6b3c8f6c7becbd1bd9d43ac5857fb41
Comment 3 Jekyll Wu 2011-10-05 06:40:44 UTC
sorry about the typo of BKO number in commit template .