Always read/write the 'DefaultProfile' entry from/into 'konsolerc'.

That means the default profile is shared among konsole and all host
apps of konsole kpart. That is not ideal enough, but much better than
current inconsistent read/write for the 'DefaultProfile' entry.

BUG:251602
FIXED-IN: 4.8